cleaner look via params, comment/delete debug messages

--- a/todo
+++ b/todo
@@ -12,6 +12,7 @@ want (v2 another time :P) :
 
 + "details":
 	interactive_set_div, interactive_rotation
+	color picker pre-render thing
 	disambiguate thingy
 	finer weave selection
 	circle around problems?? 
