--- a/todo
+++ b/todo
@@ -4,20 +4,11 @@ if we get performance issues:
 	only consider the last MOUSEMOTION every frame (maybe do anyway just out of principle)
 	when moving / zooming etc, draw 1 string out of n (see if needed via stress test), same for points?
 	
-performance
-* fix the rainbow thing: try: 1 -> compute whole thing with numpy, 2-> precompute fixed sizes
-
-sleekness / features
-* merge overlapping (at least when transforming)
-
 arcs (figure out best way to draw them... (3 points, 2 + center or fuite, ...)
 (simplest circle + other, lclick to orient)
 
-* alt weave
-* visual rotate, visual transform
-
 * some sort of grid : polar coordinates, snappy
-* REWIND + autosaves would also be very cool (nested?)
+* REWIND + autosaves 
 
 * pdf guide pages (with marks for nails)
 * export images
@@ -29,12 +20,22 @@ better system for redivs?
 * several redivs at once?
 * set default div for shapes?
 
-Non-shit install process + Manual !!!!
+Non-shit install process (at least requirement.txt + Makefile) + Manual !!!!
+Videa tutorial? (lol)
+
+STILL RELEVANT?:
+* alt weave
+* visual rotate, visual transform
 
 EXTRA:
+	redesign commandline 
+		(autocomplete commands, + maybe more, arg "types"?, multiline out)
+		macros?
+	track save file in realtime?
+
 	set params via commandline
 
-	partial loads
+	partial loads / imports
 
 	pinning terminal commands, rethink menu?
 	drag rectangle selection
