--- a/qwerasdf/todo
+++ b/qwerasdf/todo
@@ -15,31 +15,31 @@ Poly overlapping points + in Area select
 * arc other order (ortho proj)
 
 # Current batch
+* sym doc
 
-* refactor interactive transforms with math_utils
-* `sym r`/`sym s`
-
+(stash)
 * in Select submenu: stash?
-
-* rename menu buttons (more consistent / make more sense)
-
 * stash/unstash ("clipboard" for selection)
 	* use with imports (bug 1)
 
+(details)
+* rename menu buttons (more consistent / make more sense)
 * allow setting line width, antialias
 
+(z ordering)
 * ensure weave ordering (new on top even when copying, merging etc)
 * raise colors
 
+(export images)
 * view show/hide options (for nails, shapes etc)
 * export images (svg?)
+
+* option where to put out.ps/ images
+* auto ps2pdf?
 
 ----- counts as "finished" (v0.2)
 
 * erase hint messages when hooks close
-
-* option where to put out.ps
-* auto ps2pdf?
 
 * set params from the terminal, all params are dynamic
 
@@ -74,6 +74,7 @@ Poly overlapping points + in Area select
 * weave string can bend around nails?
 
 # details:
+* refactor transforms + sym command : in context copy shapes utils
 * grid sparseness adjustment should be exponential
 * only consider the last MOUSEMOTION every frame ?
 * maybe don't draw circle-center on existing shapes, merge points into shapes? (problem: when?)
